New Win10 style 1. global changes in size adaptation (added new class WindowsSizeCorrection, method "ShowHide" in MainPage.xaml.cs) 2. refreshed style files 3. deleted 1 color theme 4. new item types for Decades and NoteList

--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -346,4 +346,7 @@
   <data name="holidayTag.Label" xml:space="preserve">
     <value>праздники</value>
   </data>
+  <data name="HolidayTitle.Text" xml:space="preserve">
+    <value>отображаемые празники:</value>
+  </data>
 </root>
