Background tasks 1. tile and toast for desctop 2. tile for WP 3. unknown problem with toast for WP

--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -357,4 +357,7 @@
   <data name="styleBut.Label" xml:space="preserve">
     <value>стиль</value>
   </data>
+  <data name="LocalHolidaysPath1" xml:space="preserve">
+    <value>Holidays\ru\Holidays.xml</value>
+  </data>
 </root>
