Ads and message 1. Ad units for both apps 2. new strings in resource files 3. a new country for an ukrainian calendar (Poland) 4. a new AppBarButton for messages and a new style for a flyout (temporary) 5. new images for the store

--- a/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
@@ -358,4 +358,28 @@
   <data name="styleBut.Label" xml:space="preserve">
     <value>стиль</value>
   </data>
+  <data name="messageBtn.Label" xml:space="preserve">
+    <value>про додаток</value>
+  </data>
+  <data name="messageBody.Text" xml:space="preserve">
+    <value>Звичний календар зазнав серйозних змін: у нас нова основна тема і оформлення в стилі Windows 10. А також:
+
+•  календар став краще адаптуватися під розмір Вашого екрану; 
+•  кнопка «Перейти» стала безкоштовною; 
+•  Ви можете переглядати список свят на поточний місяць, натиснувши на відповідну кнопку в меню під календарем;
+•  оновлено кольорове оформлення; 
+•  додано нові списки свят.
+
+У додатку з'явилася реклама. Її можна здихатися, придбавши набір послуг, в який також входять повідомлення і додаткові кольорові оформлення. Отримати більше інформації про платні послуги Ви зможете на сторінці налаштувань.
+
+Дякую що завантажили цей додаток! Пропозиції та повідомлення про проблеми надсилайте на адресу syanne.red@gmail.com. Таким чином у нас з вами з'явиться зворотний зв'язок, і ваше повідомлення буде швидше оброблено.
+
+Якщо вам сподобався додаток, не забудьте оцінити його і залишити свій відгук в магазині. Щоб переглянути це повідомлення ще раз натисніть кнопку в нижньому спливаючому меню програми.
+
+З повагою,
+Syanne.</value>
+  </data>
+  <data name="messageTitle.Text" xml:space="preserve">
+    <value>Шановний користувач!</value>
+  </data>
 </root>
