--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -360,4 +360,28 @@
   <data name="LocalHolidaysPath1" xml:space="preserve">
     <value>Holidays\ru\Holidays.xml</value>
   </data>
+  <data name="messageBtn.Label" xml:space="preserve">
+    <value>о приложении</value>
+  </data>
+  <data name="messageBody.Text" xml:space="preserve">
+    <value>Привычный календарь претерпел серьезные изменения: у нас новая основная тема и оформление в стиле Windows 10. А кроме того:
+
+•  календарь стал лучше адаптироваться под размер вашего экрана;
+•  кнопка «Перейти» стала бесплатной;
+•  вы можете просматривать список праздников на текущий месяц, нажав на соответствующую кнопку в меню под календарем;
+•  обновлены цветовые темы;
+•  добавлены новые списки праздников. 
+
+В приложении появилась реклама. Ее можно убрать, приобретя набор услуг, в который так же входят уведомления и новые цветовые темы. Получить больше информации о платных услугах Вы сможете на странице настроек. 
+
+Спасибо что скачали это приложение! Предложения и сообщения об проблемах присылайте на адрес syanne.red@gmail.com. Так у нас с вами появится обратная связь, и ваше сообщение будет быстрее обработано. 
+
+Если вам понравилось приложение, не забудьте поставить оценку и оставить свой отзыв в магазине.  Просмотреть это сообщение еще раз вы сможете, нажав на кнопку в нижнем всплывающем меню приложения.
+
+С уважением,
+Syanne.</value>
+  </data>
+  <data name="messageTitle.Text" xml:space="preserve">
+    <value>Уважаемый пользователь!</value>
+  </data>
 </root>
