Testing and bug fixing: 1. tested 2. personal files were tested 3. bugs with item sizes, selection changing and other 4. PersFile.xml: alert messages

--- a/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
@@ -261,8 +261,9 @@
     <value>отримати усе!</value>
   </data>
   <data name="buyMeText.Text" xml:space="preserve">
-    <value>- Увімкнути повідомлення;
-- Змінити оформлення календаря;</value>
+    <value>- увімкнути повідомлення;
+- змінити оформлення календаря;
+- прибрати рекламні банери.</value>
   </data>
   <data name="shopBtn.Content" xml:space="preserve">
     <value>купить</value>
@@ -325,8 +326,9 @@
     <value>Holidays/uk/Themes.xml</value>
   </data>
   <data name="BuyMeTextMP" xml:space="preserve">
-    <value>- Увімкнути повідомлення;
-- Змінити оформлення календаря;</value>
+    <value>- увімкнути повідомлення;
+- змінити оформлення календаря;
+- прибрати рекламні банери.</value>
   </data>
   <data name="BuyMeTitleMP" xml:space="preserve">
     <value>придбавши цей додаток Ви зможете:</value>
@@ -362,16 +364,16 @@
     <value>Звичний календар зазнав серйозних змін: у нас нова основна тема і оформлення в стилі Windows 10. А також:
 
 •  календар став краще адаптуватися під розмір Вашого екрану; 
-•  кнопка «Перейти» стала безкоштовною; 
+•  кнопка «перейти» стала безкоштовною; 
 •  Ви можете переглядати список свят на поточний місяць, натиснувши на відповідну кнопку в меню під календарем;
 •  оновлено кольорове оформлення; 
 •  додано нові списки свят.
 
 У додатку з'явилася реклама. Її можна здихатися, придбавши набір послуг, в який також входять повідомлення і додаткові кольорові оформлення. Отримати більше інформації про платні послуги Ви зможете на сторінці налаштувань.
 
-Дякую що завантажили цей додаток! Пропозиції та повідомлення про проблеми надсилайте на адресу syanne.red@gmail.com. Таким чином у нас з вами з'явиться зворотний зв'язок, і ваше повідомлення буде швидше оброблено.
+Дякую що завантажили цей додаток! Пропозиції та повідомлення про проблеми надсилайте на адресу syanne.red@gmail.com. Таким чином у нас з вами з'явиться зворотний зв'язок, і ваше повідомлення буде швидше оброблено. Швидко перейти до вашого поштового клієнту допоможе кнопка "підтримка" на нижній панелі додатку.
 
-Якщо вам сподобався додаток, не забудьте оцінити його і залишити свій відгук в магазині. Щоб переглянути це повідомлення ще раз натисніть кнопку в нижньому спливаючому меню програми.
+Якщо вам сподобався календар, не забудьте оцінити його і залишити свій відгук в магазині (кнопка "оцінити"). Щоб переглянути це повідомлення ще раз натисніть кнопку "про версію" на нижній панелі додатку.
 
 З повагою,
 Syanne.</value>
@@ -380,9 +382,9 @@ Syanne.</value>
     <value>Шановний користувач!</value>
   </data>
   <data name="messageBtn.Label" xml:space="preserve">
-    <value>Про версію</value>
+    <value>про версію</value>
   </data>
   <data name="support.Label" xml:space="preserve">
-    <value>Підтримка</value>
+    <value>підтримка</value>
   </data>
 </root>
