--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -260,7 +260,10 @@
   </data>
   <data name="buyMeText.Text" xml:space="preserve">
     <value>- включить уведомления;
-- изменить оформление календаря.</value>
+
+ 
+- изменить оформление календаря;
+- отключить рекламу.</value>
   </data>
   <data name="shopBtn.Content" xml:space="preserve">
     <value>купить</value>
@@ -325,7 +328,9 @@
   <data name="BuyMeTextMP" xml:space="preserve">
     <value>- включить уведомления;
 
- - изменить оформление календаря.</value>
+ 
+- изменить оформление календаря;
+- отключить рекламу.</value>
   </data>
   <data name="BuyMeTitleMP" xml:space="preserve">
     <value>приобретя это приложение Вы сможете:</value>
@@ -364,16 +369,16 @@
     <value>Привычный календарь претерпел серьезные изменения: у нас новая основная тема и оформление в стиле Windows 10. А кроме того:
 
 •  календарь стал лучше адаптироваться под размер вашего экрана;
-•  кнопка «Перейти» стала бесплатной;
+•  кнопка «перейти» стала бесплатной;
 •  вы можете просматривать список праздников на текущий месяц, нажав на соответствующую кнопку в меню под календарем;
 •  обновлены цветовые темы;
 •  добавлены новые списки праздников. 
 
-В приложении появилась реклама. Ее можно убрать, приобретя набор услуг, в который так же входят уведомления и новые цветовые темы. Получить больше информации о платных услугах Вы сможете на странице настроек. 
+В приложении появилась реклама. Ее можно убрать, приобретя набор услуг, в который также входят уведомления и новые цветовые темы. Получить больше информации о платных услугах Вы сможете на странице настроек. 
 
-Спасибо что скачали это приложение! Предложения и сообщения об проблемах присылайте на адрес syanne.red@gmail.com. Так у нас с вами появится обратная связь, и ваше сообщение будет быстрее обработано. 
+Спасибо что скачали это приложение! Предложения и сообщения об проблемах присылайте на адрес syanne.red@gmail.com. Так у нас с вами появится обратная связь, и ваше сообщение будет быстрее обработано. Чтобы отправить сообщение, используйте кнопку "поддержка" на нижней панели приложения.
 
-Если вам понравилось приложение, не забудьте поставить оценку и оставить свой отзыв в магазине.  Просмотреть это сообщение еще раз вы сможете, нажав на кнопку в нижнем всплывающем меню приложения.
+Если вам понравилось приложение, не забудьте поставить оценку и оставить свой отзыв в магазине (кнопка "оценить").  Просмотреть это сообщение еще раз вы сможете, нажав на кнопку "о версии" на нижней панели приложения.
 
 С уважением,
 Syanne.</value>
@@ -382,9 +387,9 @@ Syanne.</value>
     <value>Уважаемый пользователь!</value>
   </data>
   <data name="messageBtn.Label" xml:space="preserve">
-    <value>О версии</value>
+    <value>о версии</value>
   </data>
   <data name="support.Label" xml:space="preserve">
-    <value>Поддержка</value>
+    <value>поддержка</value>
   </data>
 </root>
