Final fixations for current version: 1. version number checking; 2. selection highlight for buttons 3. tested with and without files (PersData.xml and <ColorStyle>.xaml)

--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -362,7 +362,7 @@
     <value>Holidays\ru\Holidays.xml</value>
   </data>
   <data name="msgBody" xml:space="preserve">
-    <value>Привычный календарь претерпел серьезные изменения: у нас новая основная тема и оформление в стиле Windows 10. А кроме того:
+    <value>Привычный календарь претерпел серьезные изменения: у нас новая основная тема и оформление. А кроме того:
 
 •  календарь стал лучше адаптироваться под размер вашего экрана;
 •  кнопка «перейти» стала бесплатной;
