--- a/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
@@ -361,7 +361,7 @@
     <value>стиль</value>
   </data>
   <data name="msgBody" xml:space="preserve">
-    <value>Звичний календар зазнав серйозних змін: у нас нова основна тема і оформлення в стилі Windows 10. А також:
+    <value>Звичний календар зазнав серйозних змін: у нас нова основна тема і оформлення. А також:
 
 •  календар став краще адаптуватися під розмір Вашого екрану; 
 •  кнопка «перейти» стала безкоштовною; 
