mostly WP application and data Windows Phone 1. 2 buttons beneath calGrid for scrolling to adjacent month 2. fixed bug with noteList's Height and the same with calGrid Other: 1. Application's name, short name and description in Resource.resw 2. <data from option 1> displayes in both applications automaticaly

--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -205,7 +205,7 @@
     <value>укажите, за сколько дней до события показывать напоминание, и период повторения в течение дня (часы).</value>
   </data>
   <data name="ApplicationDescription" xml:space="preserve">
-    <value>Представьте, что у Вас есть помощник, который помнит о каждом празднике, событии и встрече. Он заранее напомнит о Дне рождения Вашего друга, и Вы еще успеете подобрать ему отличный подарок. Он будет жить в каждом компьютере и планшете, который Вы используете, и исправно предупреждать, что завтра нужно приготовить вкусный ужин.</value>
+    <value>Обновленный календарь с живой плиткой, большими наборами государственных*, международных и религиозных** праздников. Этот календарь всегда поможет вам найти повод для праздника!</value>
   </data>
   <data name="ApplicationDisplayName" xml:space="preserve">
     <value>Праздничный календарь</value>
