--- a/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
@@ -207,7 +207,7 @@
     <value>вкажіть, за скільки днів до події показувати нагадування, і період повторення протягом дня (у годинах).</value>
   </data>
   <data name="ApplicationDescription" xml:space="preserve">
-    <value>Уявіть собі, що ви маєте помічника, котрий пам'ятає про кожне свято, подію та зустріч. Він нагадає про день народження вашого друга, і ви може все ще знайти  ідеальний подарунок. Він житиме у вашому комп'ютері та планшетному ПК, і обовяз'ково попередить, що завтра ви повинні приготувати смачний обід і та попрасувати одежу.</value>
+    <value>Оновлений календар з живою плиткою, великими наборами державних*, міжнародних та релігійних** свят. Цей календар завжди допоможе вам знайти файний привід для святкування!</value>
   </data>
   <data name="ApplicationDisplayName" xml:space="preserve">
     <value>Святковий календар</value>
