Refactoring and Selections 1. Controllers were refactored 2. Interactions with buttons All and Mine were changed 3. The string in Resources.resw (ru) was edited

--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -347,7 +347,7 @@
     <value>праздники</value>
   </data>
   <data name="HolidayTitle.Text" xml:space="preserve">
-    <value>отображаемые празники:</value>
+    <value>отображаемые праздники:</value>
   </data>
   <data name="rateBut.Label" xml:space="preserve">
     <value>оценить</value>
